destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts
  namespace: sock-shop
spec:
  host: carts
  subsets:
  - name: v1
    labels:
      version: v1
      name: carts
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 7
      interval: 5m
      baseEjectionTime: 15m
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  host: carts-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: carts-db
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue
  namespace: sock-shop
spec:
  host: catalogue
  subsets:
  - name: v1
    labels:
      version: v1
      name: catalogue
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue-db
  namespace: sock-shop
spec:
  host: catalogue-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: catalogue-db
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end
  subsets:
  - name: v1
    labels:
      version: v1
      name: front-end
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders
  namespace: sock-shop
spec:
  host: orders
  subsets:
  - name: v1
    labels:
      version: v1
      name: orders
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  host: orders-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: orders-db
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
  namespace: sock-shop
spec:
  host: payment
  subsets:
  - name: v1
    labels:
      version: v1
      name: payment
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: queue-master
  namespace: sock-shop
spec:
  host: queue-master
  subsets:
  - name: v1
    labels:
      version: v1
      name: queue-master
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq
  namespace: sock-shop
spec:
  host: rabbitmq
  subsets:
  - name: v1
    labels:
      version: v1
      name: rabbitmq
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: session-db
  namespace: sock-shop
spec:
  host: session-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: session-db
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping
  namespace: sock-shop
spec:
  host: shipping
  subsets:
  - name: v1
    labels:
      version: v1
      name: shipping
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user
  namespace: sock-shop
spec:
  host: user
  subsets:
  - name: v1
    labels:
      version: v1
      name: user
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-db
  namespace: sock-shop
spec:
  host: user-db
  subsets:
  - name: v1
    labels:
      version: v1
      name: user-db
